--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
 </head>
 <body>
 <header class="header">
@@ -14,26 +14,28 @@
         <nav class="header__nav">
             <ul class="header__nav-list">
                 <li class="header__nav-item">
-                    <a href="#" class="header__nav-link">Home</a>
+                    <a href="#" class="header__nav-link" tabindex="0">Home</a>
                 </li>
                 <li class="header__nav-item">
-                    <a href="#portfolio" class="header__nav-link">Portfolio</a>
+                    <a href="#portfolio" class="header__nav-link" tabindex="0">Portfolio</a>
                 </li>
-                <li class="header__nav-item">
-                    <a href="#contact" class="header__nav-link">Contact</a>
+                <li class="header__nav-item header__nav-item--contact">
+                    <a role="button" href="#contact" class="header__nav-link" tabindex="0" >Contact</a>
                 </li>
                 <li class="header__nav-item header__nav-item--github">
-                    <a href="https://github.com/your-github-username" target="_blank" class="header__nav-link">
-                        <i class="fab fa-github"></i></a>
+                    <a href="https://github.com/ErikOrtega111" tabindex="0" target="_blank" class="header__nav-link">
+                        <i class="fab fa-github"></i>
+                    </a>
                 </li>
             </ul>
         </nav>
     </div>
 </header>
+<!-- Intro -->
 <section class="intro">
     <div class="container">
-        <h1 class="intro">Hello my name is Erik Ortega🤖</h1>
-        <h2 class="intro__subtitle">I am Front End Developer, I love to code on the web and create user-friendlyUI.</h2>
+        <h1 class="intro">Hello, my name is Erik Ortega🤖</h1>
+        <h2 class="intro__subtitle">I am a Full Stack Developer, I love to code on the web and create user-friendlyUI.</h2>
     </div>
 </section>
 
@@ -41,124 +43,99 @@
     <div class="container">
         <div class="gallery__grid">
             <div class="gallery__item">
-            <label for="modal-1">
-                <span class="gallery__image-container" style="background-image: url(./Images/apple-mbp.png);"></span>
-            </label>
-            <input type="checkbox" id="modal-1" class="gallery__modal-checkbox">
+                <label for="modal-1">
+                    <span class="gallery__image-container" style="background-image: url('./Images/apple-mbp.png');"></span>
+                </label>
+                <input type="checkbox" id="modal-1" class="gallery__modal-checkbox">
                 <div class="gallery__modal">
-                    <label for="" class="gallery__modal-close">&times;</label>
-                    <img src="./Images/apple-mbp.png" alt="Apple MacBook Pro Website" class="alt gallery__modal-image">
+                    <label for="modal-1" class="gallery__modal-close">&times;</label>
+                    <img src="./Images/apple-mbp.png" alt="Apple MacBook Pro Website" class="gallery__modal-image">
                 </div>
                 <div class="gallery__item-info">
                     <span class="gallery__item-title">MacBook Pro</span>
-                    <a href="https://apple-mbp.vercel.app" target="_blank" class="gallery_-item-link">
-                    <i class="fas fa-external-link-alt"></i></a>
+                    <a href="https://apple-mbp.vercel.app" target="_blank" class="gallery__item-link">
+                        <i class="fas fa-external-link-alt"></i>
+                    </a>
                 </div>
             </div>
-        </div>
-    </div>
-</section>
-
-<section id="portfolio" class="gallery">
-    <div class="container">
-        <div class="gallery__grid">
             <div class="gallery__item">
-            <label for="modal-1">
-                <span class="gallery_-image-container" style="background-image: url(./Images/codeswitcher.png);"></span>
-            </label>
-            <input type="checkbox" id="modal-1" class="gallery__modal-checkbox">
+                <label for="modal-2">
+                    <span class="gallery__image-container" style="background-image: url('./Images/codeswitcher.png');"></span>
+                </label>
+                <input type="checkbox" id="modal-2" class="gallery__modal-checkbox">
                 <div class="gallery__modal">
-                    <label for="" class="gallery__modal-close">&times;</label>
-                    <img src="./Images/codeswitcher.png" alt="Code Switcher Website" class="alt gallery__modal-image">
+                    <label for="modal-2" class="gallery__modal-close">&times;</label>
+                    <img src="./Images/codeswitcher.png" alt="Code Switcher Website" class="gallery__modal-image">
                 </div>
                 <div class="gallery__item-info">
                     <span class="gallery__item-title">Code Switcher</span>
-                    <a href="https://apple-mbp.vercel.app" target="_blank" class="gallery_-item-link">
-                    <i class="fas fa-external-link-alt"></i></a>
+                    <a href="https://codeswitcher.vercel.app" target="_blank" class="gallery__item-link">
+                        <i class="fas fa-external-link-alt"></i>
+                    </a>
                 </div>
             </div>
-        </div>
-    </div>
-</section>
-<section id="portfolio" class="gallery">
-    <div class="container">
-        <div class="gallery__grid">
             <div class="gallery__item">
-            <label for="modal-1">
-                <span class="gallery_-image-container" style="background-image: url(./Images/calculator.png);"></span>
-            </label>
-            <input type="checkbox" id="modal-1" class="gallery__modal-checkbox">
+                <label for="modal-3">
+                    <span class="gallery__image-container" style="background-image: url(./Images/calculator.png);"></span>
+                </label>
+                <input type="checkbox" id="modal-3" class="gallery__modal-checkbox">
                 <div class="gallery__modal">
-                    <label for="" class="gallery__modal-close">&times;</label>
-                    <img src="./Images/calculator.png" alt="Calculator HTML & CSS Only" class="alt gallery__modal-image">
+                    <label for="modal-3" class="gallery__modal-close">&times;</label>
+                    <img src="./Images/calculator.png" alt="Calculator HTML & CSS Only" class="gallery__modal-image">
                 </div>
                 <div class="gallery__item-info">
                     <span class="gallery__item-title">Calculator</span>
-                    <a href="https://codepen.io/gambhirsharma/pen/ExwBKop" target="_blank" class="gallery_-item-link">
-                    <i class="fas fa-external-link-alt"></i></a>
+                    <a href="https://codepen.io/gambhirsharma/pen/ExwBKop" target="_blank" class="gallery__item-link">
+                        <i class="fas fa-external-link-alt"></i>
+                    </a>
                 </div>
             </div>
-        </div>
-    </div>
-</section>
-<section id="portfolio" class="gallery">
-    <div class="container">
-        <div class="gallery__grid">
             <div class="gallery__item">
-            <label for="modal-1">
-                <span class="gallery_-image-container" style="background-image: url(./Images/DoomScroll.png);"></span>
-            </label>
-            <input type="checkbox" id="modal-1" class="gallery__modal-checkbox">
+                <label for="modal-4">
+                    <span class="gallery__image-container" style="background-image: url(./Images/DoomScroll.png);"></span>
+                </label>
+                <input type="checkbox" id="modal-4" class="gallery__modal-checkbox">
                 <div class="gallery__modal">
-                    <label for="" class="gallery__modal-close">&times;</label>
-                    <img src="./Images/DoomScroll.png" alt="Doom Scroll" class="alt gallery__modal-image">
+                    <label for="modal-4" class="gallery__modal-close">&times;</label>
+                    <img src="." alt="Doom Scroll" class="gallery__modal-image">
                 </div>
                 <div class="gallery__item-info">
                     <span class="gallery__item-title">Doom Scroll</span>
-                    <a href="https://codepen.io/cobra_winfrey/pen/oNOMRav" target="_blank" class="gallery_-item-link">
-                    <i class="fas fa-external-link-alt"></i></a>
+                    <a href="https://codepen.io/cobra_winfrey/pen/oNOMRav" target="_blank" class="gallery__item-link">
+                        <i class="fas fa-external-link-alt"></i>
+                    </a>
                 </div>
             </div>
-        </div>
-    </div>
-</section>
-<section id="portfolio" class="gallery">
-    <div class="container">
-        <div class="gallery__grid">
             <div class="gallery__item">
-            <label for="modal-1">
-                <span class="gallery_-image-container" style="background-image: url(./Images/glass-gradient-card.png);"></span>
-            </label>
-            <input type="checkbox" id="modal-1" class="gallery__modal-checkbox">
+                <label for="modal-5">
+                    <span class="gallery__image-container" style="background-image: url(./Images/glass-gradient-card.png);"></span>
+                </label>
+                <input type="checkbox" id="modal-5" class="gallery__modal-checkbox">
                 <div class="gallery__modal">
-                    <label for="" class="gallery__modal-close">&times;</label>
-                    <img src="./Images/glass-gradient-card.png" alt="Glass Gradient Card" class="alt gallery__modal-image">
+                    <label for="modal-5" class="gallery__modal-close">&times;</label>
+                    <img src="./Images/glass-gradient-card.png" alt="Glass Gradient Card" class="gallery__modal-image">
                 </div>
                 <div class="gallery__item-info">
                     <span class="gallery__item-title">Glass Gradient Card</span>
-                    <a href="https://codepen.io/ricardoolivaalonso/pen/poYEpwP" target="_blank" class="gallery_-item-link">
-                    <i class="fas fa-external-link-alt"></i></a>
+                    <a href="https://codepen.io/Podgro/pen/oNOKYqr" target="_blank" class="gallery__item-link">
+                        <i class="fas fa-external-link-alt"></i>
+                    </a>
                 </div>
             </div>
-        </div>
-    </div>
-</section>
-<section id="portfolio" class="gallery">
-    <div class="container">
-        <div class="gallery__grid">
             <div class="gallery__item">
-            <label for="modal-1">
-                <span class="gallery_-image-container" style="background-image: url(./Images/computer-diorama.png);"></span>
-            </label>
-            <input type="checkbox" id="modal-1" class="gallery__modal-checkbox">
+                <label for="modal-6">
+                    <span class="gallery__image-container" style="background-image: url(./Images/computer-diorama.png);"></span>
+                </label>
+                <input type="checkbox" id="modal-6" class="gallery__modal-checkbox">
                 <div class="gallery__modal">
-                    <label for="" class="gallery__modal-close">&times;</label>
-                    <img src="./Images/computer-diorama.png" alt="Computer Diorama" class="alt gallery__modal-image">
+                    <label for="modal-6" class="gallery__modal-close">&times;</label>
+                    <img src="./Images/computer-diorama.png" alt="computer diorama" class="gallery__modal-image">
                 </div>
                 <div class="gallery__item-info">
                     <span class="gallery__item-title">Computer Diorama</span>
-                    <a href="https://codepen.io/ricardoolivaalonso/pen/poYEpwP" target="_blank" class="gallery_-item-link">
-                    <i class="fas fa-external-link-alt"></i></a>
+                    <a href="https://codepen.io/ricardoolivaalonso/pen/poYEpwP" target="_blank" class="gallery__item-link">
+                        <i class="fas fa-external-link-alt"></i>
+                    </a>
                 </div>
             </div>
         </div>
